ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/LoanApplicationIncome__c.object-meta.xml
<CustomObject>
    <label>Loan Application Income</label>
    <nameField>
        <label>Loan Application Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Application Income</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>