ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>