ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/IncomeEmploymentTypes__c.field-meta.xml
<CustomField>
    <fullName>IncomeEmploymentTypes__c</fullName>
    <label>Income Employment Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeEmploymentTypes</valueSetName>
    </valueSet>
</CustomField>