ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/IncomeGovernmentBenefitsType__c.field-meta.xml
<CustomField>
    <fullName>IncomeGovernmentBenefitsType__c</fullName>
    <label>Income Government Benefits Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeGovernmentBenefitsType</valueSetName>
    </valueSet>
</CustomField>