ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/IncomeInvestmentType__c.field-meta.xml
<CustomField>
    <fullName>IncomeInvestmentType__c</fullName>
    <label>Income Investment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeInvestmentType</valueSetName>
    </valueSet>
</CustomField>