ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/IncomeMaintenanceChildSupportType__c.field-meta.xml
<CustomField>
    <fullName>IncomeMaintenanceChildSupportType__c</fullName>
    <label>Income Maintenance Child Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeMaintenanceChildSupportType</valueSetName>
    </valueSet>
</CustomField>