ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/IncomeOtherType__c.field-meta.xml
<CustomField>
    <fullName>IncomeOtherType__c</fullName>
    <label>Income Other Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeOtherType</valueSetName>
    </valueSet>
</CustomField>