ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/IncomeRentalType__c.field-meta.xml
<CustomField>
    <fullName>IncomeRentalType__c</fullName>
    <label>Income Rental Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeRentalType</valueSetName>
    </valueSet>
</CustomField>