ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/IncomeRetirementType__c.field-meta.xml
<CustomField>
    <fullName>IncomeRetirementType__c</fullName>
    <label>Income Retirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeRetirementType</valueSetName>
    </valueSet>
</CustomField>