ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/IncomeSubType__c.field-meta.xml
<CustomField>
    <fullName>IncomeSubType__c</fullName>
    <label>Income SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeSubTypes</valueSetName>
    </valueSet>
</CustomField>