ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/IncomeTypeAFG__c.field-meta.xml
<CustomField>
    <fullName>IncomeTypeAFG__c</fullName>
    <label>Income Type AFG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family Allowance</fullName>
            </value>
            <value>
                <fullName>Other Investment</fullName>
            </value>
            <value>
                <fullName>Overtime - Gross</fullName>
            </value>
            <value>
                <fullName>Overtime - New</fullName>
            </value>
            <value>
                <fullName>Pension &amp; Social security</fullName>
            </value>
            <value>
                <fullName>Rental Income - Existing</fullName>
            </value>
            <value>
                <fullName>Rental Income - New</fullName>
            </value>
            <value>
                <fullName>Salary - Gross</fullName>
            </value>
            <value>
                <fullName>Salary - Net</fullName>
            </value>
            <value>
                <fullName>Self Emp - Amortisation</fullName>
            </value>
            <value>
                <fullName>Self Emp - Depreciation</fullName>
            </value>
            <value>
                <fullName>Self Emp - Interest-HP-Lease</fullName>
            </value>
            <value>
                <fullName>Self Emp - Profit</fullName>
            </value>
            <value>
                <fullName>Self Emp - Superannuation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>