ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/LoanApplicationAsset__c.field-meta.xml
<CustomField>
    <fullName>LoanApplicationAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application Asset</label>
    <referenceTo>LoanApplicationAsset__c</referenceTo>
    <relationshipLabel>Loan Application Income</relationshipLabel>
    <relationshipName>Loan_Application_Income</relationshipName>
    <type>Lookup</type>
</CustomField>