ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/OwnershipPercentage__c.field-meta.xml
<CustomField>
    <fullName>OwnershipPercentage__c</fullName>
    <label>Ownership Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>