ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/PreviousYearAmount__c.field-meta.xml
<CustomField>
    <fullName>PreviousYearAmount__c</fullName>
    <label>Previous Year Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>