ctm-sf-homeloan-app/main/default/objects/LoanApplicationIncome__c/fields/TaxType__c.field-meta.xml
<CustomField>
    <fullName>TaxType__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeTaxTypes</valueSetName>
    </valueSet>
</CustomField>